5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_2729.log
== TEST (2019-04-16 12:02:42) 
-- CODE:
"Leitura de dois numeros:
a = int(input("digite o numero a: "))
b = int(input("digite o numero b: "))
ab = a*b
if(ab%2 == 0):
	print(a + b)
else:
	print(b - a)

-- ERROR:
File "XXXX", line 1
    "Leitura de dois numeros:
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:03:00) 
-- CODE:
#Leitura de dois numeros:
a = int(input("digite o numero a: "))
b = int(input("digite o numero b: "))
ab = a*b
if(ab%2 == 0):
	print(a + b)
else:
	print(b - a)

-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:03:16) 
-- CODE:
#Leitura de dois numeros:
a = int(input("digite o numero a: "))
b = int(input("digite o numero b: "))
ab = a*b
if(ab%2 == 0):
	print(a + b)
else:
	print(b - a)

-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:03:25) 
-- CODE:
#Leitura de dois numeros:
a = int(input("digite o numero a: "))
b = int(input("digite o numero b: "))
ab = a*b
if(ab%2 == 0):
	print(a + b)
else:
	print(b - a)

-- EXECUTION TIME:
0.125346
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
